# FilterHaplotypes

./: Outline.md  Outline_phase1.md  README.md  README_phase1.md  pyproject.toml
results/: log.txt  report.html  summary_report.tsv
src/filter_haplotypes/: main.py
src/filter_haplotypes/core/: filtering.py  models.py
src/filter_haplotypes/parsers/: busco_parser.py  fasta_parser.py  mash_parser.py  paf_parser.py
src/filter_haplotypes/utils/: logging.py  stats.py
src/filter_haplotypes/visualization/: report_generator.py
src/filter_haplotypes/visualization/templates/: report.html
tests/: test_filtering.py  test_integration.py  test_parsers.py
